# AntiBundleDuping

./: .gitignore  LICENCE  README.MD  pyproject.toml
src/endstone_bundle_anti_dupe/: __init__.py  plugin.py
