[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-antibundleduping"
version = "1.0.0"
description = "A plugin that disabled bundle duplication."
authors = [
    { name = "Maki" }
]
dependencies = [
    "endstone",
    "nbtlib"
]

[project.entry-points."endstone"]
"antibundleduping" = "endstone_bundle_anti_dupe.plugin:AntiBundleDuping"