[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-bundle-anti-dupe"
version = "0.1.3"
description = "A plugin that disables bundle duplication."
authors = [
    { name = "Maki" }
]
dependencies = [
    "endstone"
]

[project.entry-points."endstone"]
"bundle_anti_dupe" = "endstone_bundle_anti_dupe.plugin:AntiBundleDuping"